2003-10-24  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug of sometimes an extra blank page
	  being printed after the job.

2003-10-21  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Added option "--disable-file-converter-check" to
	  disable checking whether there is a file converter installed.

2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: Added /usr/local/libexec to LIBSEARCHPATH for *BSD
	  compatibilty. Thanks to Sebastian Horzela (sh at horzela dot
	  com).
	
	* configure.in: For CUPS a2ps, enscript, or mpage is not needed,
	  here texttops of CUPS is used be default. So let ./configure
	  also check for texttops.

	* tests/Makefile.in: Continue testing when comparing the result of
	  a test with the reference file fails, give only a warning in
	  such a case.

2003-10-20  Patrick Powell <papowell@lprng.com>

	* added 'use strict' and -w to the Perl options.

	* fixed a large number of undefined or out of scope variable
	  references discovered by the 'use strict' and -w.

	* added 'use Cwd' to get current working directory

	* Modified foomatic-rip to auto-sense the LPRng configuration.
	  This eliminates the need for the --lprng option, unless you want
	  to use it.  You now set the ppd_file option in the printcap to
	  specify the location of the PPD file:

	  	lp:filter=/path/to/foomatic-rip
	  	  :ppd_file=/path/to/ppdfile
	   or
	  	lp:filter=/path/to/foomatic-rip --ppd=/path/to/ppdfile \
		[options]
	   or
	  	lp:filter=/path/to/foomatic-rip --lprng [options] \
		/path/to/ppdfile
		  (legacy documented foomatic method)

	  If you specify both, the command line overrides the :ppd_file
	  New versions of the LPRng 'checkpc' program will check for the
	  presence of the :ppd_file if it is specified.

	* Modified fomatic-rip to be less 'verbose' and not put out blank
	  lines when used with LPRng.  Changed 'dieing' to 'dying' in
	  error messages, as well as removing some typeos in other places.
