@@ -36,3 +36,7 @@
 
 # Set the PATH value to be used by foomatic-rip:
 # execpath: /usr/local/bin:/usr/bin:/bin
+
+# Set the directories in which foomatic-rip should search for CUPS filters:
+# cupsfilterpath: /usr/local/lib/cups/filter:/usr/local/lib/cups/filter:/usr/local/libexec/cups/filter:/opt/cups/filter:/usr/lib/cups/filter
+
